# capgame

./: .gitignore  .pre-commit-config.yaml  CapGame_Project_Proposal.docx  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
capgame/: __init__.py
capgame/adequacy/: __init__.py  _validation.py  eue.py  lole.py  reserve_margin.py
capgame/app/: __init__.py  cli.py  streamlit_app.py  ui.py
capgame/calibration/: __init__.py  demand.py  ieso_loaders.py  ontario.py  outages.py  renewables_cf.py
capgame/experiments/: __init__.py  baseline.py  ontario_study.py  scenarios.py
capgame/forecast/: __init__.py  monte_carlo.py  pathways.py  trajectory.py
capgame/game/: __init__.py  bilevel.py  cournot.py  market_structure.py  mpe.py  sfe.py
capgame/mechanisms/: __init__.py  base.py  capacity_payment.py  energy_only.py  forward_capacity.py  reliability_options.py
capgame/optimization/: __init__.py  calibration.py  mcp_solver.py  sdp.py
capgame/stochastic/: __init__.py  demand.py  outages.py  renewables.py
docs/: ROADMAP.md  math_notes.md
notebooks/: ontario_missing_money.ipynb
scripts/: fetch_ieso.py  forecast_ontario.py  validate_ontario.py
tests/: conftest.py  test_adequacy.py  test_bilevel.py  test_calibration.py  test_calibration_ieso.py  test_cournot.py  test_demand.py  test_experiments.py  test_forecast.py  test_market_structure.py  test_mechanisms.py  test_missing_money.py  test_ontario_study.py  test_reliability_options.py  test_renewables.py  test_scenarios.py  test_sdp.py  test_stubs.py
